fix padding, align tab nav

--- a/frontend/pages/ManageControlsPage/SetupExperience/cards/InstallSoftware/_styles.scss
+++ b/frontend/pages/ManageControlsPage/SetupExperience/cards/InstallSoftware/_styles.scss
@@ -1,7 +1,7 @@
 .install-software {
-  .react-tabs__tab-list {
-    margin-bottom: $pad-small;
-  }
+  // .react-tabs__tab-list {
+  //   margin-bottom: $pad-small;
+  // }
   &__windows {
     @include tab-empty-state;
     max-width: none;
